2014-10-23  Albert Graef  <aggraef@gmail.com>

	* interpreter.cc (compiler): As proposed by Alastair Pharo, use
	some linker magic in the batch compiler in order to locate
	imported libraries which can't be found by their name or under the
	Pure library path. Cf. ticket #30:
	https://bitbucket.org/purelang/pure-lang/issue/30

2014-10-22  Albert Graef  <aggraef@gmail.com>

	* 0.63 release.

	* interpreter.cc: Integrate Barry Schwartz' support for inlining
	ATS (http://www.ats-lang.org/).

2014-09-23  Albert Graef  <aggraef@gmail.com>

	* interpreter.cc/hh, runtime.cc: Bugfixes in Faust interface
	(consistent treatment of empty group and control labels across
	different Faust versions).

2014-09-15  Albert Graef  <aggraef@gmail.com>

	* 0.62 release.

	* pure.cc, interpreter.cc/hh, runtime.cc: Add llc -m code
	generation options for the batch compiler (experimental).

2014-09-10  Albert Graef  <aggraef@gmail.com>

	* 0.61 release.

	* configure.ac: Fixes in the build system when linking against the
	static LLVM libs (LLVM 3.5).

2014-09-09  Albert Graef  <aggraef@gmail.com>

	* More LLVM 3.5 compatibility fixes related to the batch compiler.
	LLVM 3.5 now has a new user_iterator class to iterate over the
	uses of variables and functions in an instruction; the old
	use_iterator class can't be used for that purpose any more.

	* interpreter.cc (interpreter::compiler): For LLVM 3.3 and later,
	let llc create native objects directly from the LLVM source. This
	should speed up compilation in the batch compiler and also work
	around bugs which make llc generate invalid native assembler code
	on some systems.

2014-09-08  Albert Graef  <aggraef@gmail.com>

	* LLVM 3.5 compatibility fixes

2014-03-24  Albert Gräf  <aggraef@gmail.com>

	* 0.60 release.

	* interpreter.cc, runtime.cc, etc/pure-mode.el.in,
	test/test020.pure: minor fixes for OS X compatibility.

2014-03-09  Albert Graef  <aggraef@gmail.com>

	* runtime.cc/hh: Add some helper functions to serialize accesses