@@ -1,3 +1,11 @@
+2014-10-24  Albert Graef  <aggraef@gmail.com>
+
+	* configure.ac, runtime.cc/h: Add Perl regex support. This is
+	still experimental and currently disabled by default, as it may
+	alter the interpretation of certain constructs in regular
+	expressions. Configuring with --with-pcre enables it in the
+	runtime (this needs libpcreposix, see http://www.pcre.org/).
+
 2014-10-23  Albert Graef  <aggraef@gmail.com>
 
 	* interpreter.cc (compiler): As proposed by Alastair Pharo, use
